# Detector

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
src/: Environment.cpp  Environment.h  main.cpp
src/http/: Server.cpp  Server.h  Session.cpp  Session.h
src/logger/: Logger.cpp  Logger.hpp  Logger.ipp
